# gpu_pricecheck

./: Cargo.toml  README.md
src/: cli.rs  main.rs  output.rs  scraper.rs  web.rs
static/: script.js  style.css
templates/: index.html  index.html.askama
