[package]
name = "gpu_pricecheck"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.19"
# Removed the features array:
comfy-table = "7.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"