[package]
name = "gpu_pricecheck"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.19"
comfy-table = "7.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
askama = "0.14"
askama_axum = "0.4"
futures = "0.3"
chrono = "0.4"
thiserror = "2.0.12"

[build-dependencies]
askama = "0.14"
